# TD-Pipe

./: .gitignore  README.md  example.py  format.sh  pyproject.toml  requirements.txt  setup.py
TD_Pipe/: __init__.py  block.py  config.py  outputs.py  sequence.py  utils.py
TD_Pipe/core/: block_manager.py  policy.py  scheduler.py
TD_Pipe/engine/: arg_utils.py  async_llm_engine.py  llm_engine.py  ray_utils.py
TD_Pipe/entrypoints/: api_server.py  llm.py
TD_Pipe/entrypoints/openai/: api_server.py  protocol.py
TD_Pipe/model_executor/: __init__.py  input_metadata.py  model_loader.py  sampling_metadata.py  weight_utils.py
TD_Pipe/model_executor/layers/: activation.py  layernorm.py  linear.py  projection.py  rotary_embedding.py  sampler.py  vocab_parallel_embedding.py
TD_Pipe/model_executor/layers/attention/: __init__.py  attention.py
TD_Pipe/model_executor/layers/attention/backends/: flash_attn.py  (+2 more)
TD_Pipe/model_executor/layers/quantization/: __init__.py  awq.py  base_config.py  gptq.py  squeezellm.py
TD_Pipe/model_executor/models/: __init__.py  llama.py  mixtral.py  opt.py  qwen2.py
TD_Pipe/model_executor/parallel_utils/: communication_op.py  parallel_state.py
TD_Pipe/transformers_utils/: config.py  tokenizer.py
TD_Pipe/transformers_utils/configs/: __init__.py
TD_Pipe/transformers_utils/tokenizers/: __init__.py
TD_Pipe/worker/: cache_engine.py  model_runner.py  worker.py
benchmark/: benchmark_throughput_predict.py
csrc/: cache.h  cache_kernels.cu  pybind.cpp
profiler-results/: L20-Llama-13B.csv  L20-Qwen2.5-32B.csv  L20-opt-125m.csv
(+1 files in other folders)
