[build-system]
# Should be mirrored in requirements-build.txt
requires = [
    "ninja == 1.11.1.1",
    "packaging == 24.0",
    "setuptools == 69.5.1",
    "torch == 2.3.1",
    "wheel == 0.43.0",
]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    # "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    # "I",
]
ignore = [
    # star imports
    "F405", "F403",
    # lambda expression assignment
    "E731",
    # line too long, handled by black formatting
    "E501",
]
